[package]
name = "enum-dir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive", "cargo"] }
log = "0.4.17"
log4rs = "1.1.1"
tokio = { version = "1.19.2", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies.reqwest]
default-features = false
features = ["rustls-tls"]
version = "0.11.11"